--- a/web/login.html
+++ b/web/login.html
@@ -3,15 +3,15 @@
     <h1 align="center">Hello, {{login}}!</h1>
 </div>
 <div>
-    <form ng-controller="loginCtrl">
+    <form ng-controller="loginController">
         <div class="col-sm-4 col-sm-offset-4">
             <div class="form-group">
                 <label for="loginInput">Login</label>
-                <input id="loginInput" class="form-control" placeholder="Enter login">
+                <input id="loginInput" class="form-control" placeholder="Enter login" ng-model="login"/>
             </div>
             <div class="form-group">
                 <label for="passwordInput">Password</label>
-                <input id="passwordInput" class="form-control" placeholder="Enter password">
+                <input id="passwordInput" class="form-control" placeholder="Enter password" ng-model="password">
             </div>
             <button type="submit" class="btn btn-primary">Submit</button>
         </div>
