--- a/web/index.html
+++ b/web/index.html
@@ -5,7 +5,10 @@
     <script src="resources/js/angular-route.js"></script>
     <script src="resources/js/app.js"></script>
     <script src="resources/js/controllers.js"></script>
-    <script src="resources/js/factory.js"></script>
+    <script src="resources/js/angular-resource.js"></script>
+    <script src="resources/js/angular-animate.js"></script>
+    <script src="resources/js/angular-cookies.js"></script>
+    <script src="resources/js/services.js"></script>
     <script src="resources/js/angular-ui.github.io_bootstrap_ui-bootstrap-tpls-0.12.0.js"></script>
 </head>
 <body>
