--- a/web/login.html
+++ b/web/login.html
@@ -14,6 +14,9 @@
                 <input id="passwordInput" class="form-control" placeholder="Enter password" ng-model="loginPerson.password">
             </div>
             <button type="submit" class="btn btn-primary">Submit</button>
+            <ul ng-hide="!successMessages" class="success">
+                <li ng-repeat="message in successMessages">{{message}}</li>
+            </ul>
         </div>
     </form>
 </div>
