--- a/web/start.html
+++ b/web/start.html
@@ -1,4 +1,4 @@
-
+<script src="resources/js/controllers/carousel.js"></script>
 <div class="jumbotron">
     <h1 align="center">Who are you? I'm really wanna know!</h1>
 </div>
