--- a/web/index.html
+++ b/web/index.html
@@ -1,15 +1,19 @@
 <html ng-app="scheduleApp">
 <head>
     <link rel="stylesheet" type="text/css" href="resources/css/bootstrap.min.css">
-    <script src="resources/js/angular.js"></script>
-    <script src="resources/js/angular-route.js"></script>
+    <script src="resources/js/angular/angular.js"></script>
+    <script src="resources/js/angular/angular-route.js"></script>
     <script src="resources/js/app.js"></script>
-    <script src="resources/js/controllers.js"></script>
-    <script src="resources/js/angular-resource.js"></script>
-    <script src="resources/js/angular-animate.js"></script>
-    <script src="resources/js/angular-cookies.js"></script>
+    <script src="resources/js/controllers/login.js"></script>
+    <script src="resources/js/controllers/scheduleTable.js"></script>
+    <script src="resources/js/angular/angular-resource.js"></script>
+    <script src="resources/js/angular/angular-animate.js"></script>
+    <script src="resources/js/angular/angular-cookies.js"></script>
+    <script src="resources/js/angular/angular-storage.js"></script>
+    <script src="resources/js/angular/angular-ui-router.js"></script>
+    <script src="resources/js/angular/angular-jwt.js"></script>
     <script src="resources/js/services.js"></script>
-    <script src="resources/js/angular-ui.github.io_bootstrap_ui-bootstrap-tpls-0.12.0.js"></script>
+    <script src="resources/js/angular/angular-ui.github.io_bootstrap_ui-bootstrap-tpls-0.12.0.js"></script>
 </head>
 <body>
     <div ng-view></div>
