--- a/web/index.html
+++ b/web/index.html
@@ -4,6 +4,7 @@
     <script src="resources/js/angular/angular.js"></script>
     <script src="resources/js/angular/angular-route.js"></script>
     <script src="resources/js/app.js"></script>
+    <script src="resources/js/controllers/carousel.js"></script>
     <script src="resources/js/controllers/login.js"></script>
     <script src="resources/js/controllers/scheduleTable.js"></script>
     <script src="resources/js/angular/angular-resource.js"></script>
@@ -16,6 +17,6 @@
     <script src="resources/js/angular/angular-ui.github.io_bootstrap_ui-bootstrap-tpls-0.12.0.js"></script>
 </head>
 <body>
-    <div ng-view></div>
+    <section ui-view></section>
 </body>
 </html>
