--- a/web/scheduleTable.html
+++ b/web/scheduleTable.html
@@ -1,2 +1,17 @@
 
 <h2 align="center">Zdraste</h2>
+
+<table>
+    <tr>
+        <th>09.00</th>
+        <th>10.00</th>
+        <th>11.00</th>
+        <th>12.00</th>
+        <th>13.00</th>
+        <th>14.00</th>
+        <th>15.00</th>
+    </tr>
+    <tr ng-repeat="classday in classdays">
+        <td ng-repeat="class in classday.classes">{class.subject.name}</td>
+    </tr>
+</table>
