--- a/web/index.html
+++ b/web/index.html
@@ -1,18 +1,27 @@
 <html ng-app="scheduleApp">
 <head>
     <link rel="stylesheet" type="text/css" href="resources/css/bootstrap.min.css">
+    <link rel="stylesheet" type="text/css" href="resources/css/fullcalendar.css">
     <script src="resources/js/angular/angular.js"></script>
     <script src="resources/js/app.js"></script>
     <script src="resources/js/controllers/carousel.js"></script>
     <script src="resources/js/controllers/login.js"></script>
     <script src="resources/js/controllers/scheduleTable.js"></script>
+    <script src="resources/js/controllers/publicSchedule.js"></script>
     <script src="resources/js/angular/angular-animate.js"></script>
     <script src="resources/js/angular/angular-storage.js"></script>
     <script src="resources/js/angular/angular-ui-router.js"></script>
     <script src="resources/js/angular/angular-jwt.js"></script>
+    <script src="resources/js/angular/calendar.js"></script>
     <script src="resources/js/services.js"></script>
     <script src="resources/js/angular/angular-ui.github.io_bootstrap_ui-bootstrap-tpls-0.12.0.js"></script>
     <script src="resources/js/angular/restangular.js"></script>
+    <script src="resources/js/jquery/jquery-1.11.2.js"></script>
+    <script src="resources/js/jquery/moment.min.js"></script>
+    <script src="resources/js/jquery/fullcalendar.js"></script><!--
+    <script src="resources/js/jquery/lang/en-gb.js"></script>-->
+    <script src="resources/js/jquery/lang/ru.js"></script>
+
 </head>
 <body>
     <section ui-view></section>
