--- a/web/scheduleTable.html
+++ b/web/scheduleTable.html
@@ -1,4 +1,9 @@
 
 <h2 align="center">Zdraste</h2>
 
-<div ui-calendar="uiConfig.calendar" class="col-sm-8 calendar"></div>
+<div ui-calendar="uiConfig.calendar" class="col-sm-8 calendar" align="center"></div>
+
+<table ng-repeat-start="classday in classdays">
+    <tr><th>{{classday.localeDate}}</th></tr>
+    <tr ng-repeat="lesson in classday.lessons">{{lesson.subject.name+":"+lesson.teacher.name}}}</tr>
+</table>
