--- a/web/scheduleTable.html
+++ b/web/scheduleTable.html
@@ -2,6 +2,7 @@
 <h2 align="center">Zdraste</h2>
 
 <input type="text" ng-model="currentGroup"/>
+<input type="button" ng-click="addSomeStaff()"/>
 <table ng-repeat="classday in classdays">
     <tr><th>{{classday.localeDate | date}}</th></tr>
     <tr  ng-repeat="lesson in classday.lessons">{{lesson.subject.name+":"+lesson.teacher.name}}</tr>
