--- a/web/index.html
+++ b/web/index.html
@@ -1,11 +1,12 @@
 <html ng-app="scheduleApp">
 <head>
     <link rel="stylesheet" type="text/css" href="resources/css/bootstrap.min.css">
-    <link rel="stylesheet" type="text/css" href="resources/css/fullcalendar.css">
+    <link rel="stylesheet" type="text/css" href="resources/css/someStyleSheets.css">
     <script src="resources/js/angular/angular.js"></script>
     <script src="resources/js/app.js"></script>
     <script src="resources/js/controllers/carousel.js"></script>
     <script src="resources/js/controllers/login.js"></script>
+    <script src="resources/js/angular/angular-resources.js"></script>
     <script src="resources/js/angular/angular-animate.js"></script>
     <script src="resources/js/angular/angular-storage.js"></script>
     <script src="resources/js/angular/angular-ui-router.js"></script>
@@ -13,6 +14,7 @@
     <script src="resources/js/services.js"></script>
     <script src="resources/js/angular/angular-ui.github.io_bootstrap_ui-bootstrap-tpls-0.12.0.js"></script>
     <script src="resources/js/controllers/register.js"></script>
+    <script src="resources/js/services.js"></script>
 </head>
 <body>
     <section ui-view></section>
