--- a/web/register.html
+++ b/web/register.html
@@ -1,11 +1,19 @@
 
 <div class="jumbotron">
-    <h1 align="center" ng-show="loginPerson.login">Greetings, master {{loginPerson.login}}!</h1>
-    <h1 align="center" ng-show="!loginPerson.login">Greetings, master jedi!</h1>
+    <h1 align="center" ng-show="registerPerson.login">Greetings, master {{registerPerson.login}}!</h1>
+    <h1 align="center" ng-show="!registerPerson.login">Greetings, master jedi!</h1>
 </div>
 <div>
     <form id="log">
         <div class="col-sm-4 col-sm-offset-4">
+            <div class="form-group">
+                <label for="firstNameInput">First Name</label>
+                <input id="firstNameInput" class="form-control" placeholder="Enter your first name"  ng-model="registerPerson.firstName"/>
+            </div>
+            <div class="form-group">
+                <label for="lastNameInput">Last Name</label>
+                <input id="lastNameInput" class="form-control" placeholder="Enter your last name"  ng-model="registerPerson.lastName"/>
+            </div>
             <div class="form-group">
                 <label for="loginInput">Login</label>
                 <input id="loginInput" class="form-control" placeholder="Create your login"  ng-model="registerPerson.login"/>
@@ -15,13 +23,17 @@
                 <input id="passwordInput" class="form-control" placeholder="Create your password" ng-model="registerPerson.password">
             </div>
             <div class="form-group">
-                <label for="passwordInput">Repeat password</label>
+                <label for="repeatPasswordInput">Repeat password</label>
                 <input id="repeatPasswordInput" class="form-control" placeholder="Repeat your password" ng-model="registerPerson.repeatPassword">
             </div>
-            <button type="submit" ng-click="login()" class="btn btn-primary">Submit</button>
+            <button type="submit" ng-click="register()" class="btn btn-primary">Submit</button>
             <ul ng-hide="!successMessages" class="success">
                 <li ng-repeat="message in successMessages">{{message}}</li>
             </ul>
+            <ul ng-hide="!errorMessages" class="error">
+                <li ng-repeat="message in errorMessages">{{message}}</li>
+            </ul>
+
         </div>
     </form>
 </div>
