Santa wishes rebuiding

--- a/web/index.html
+++ b/web/index.html
@@ -14,7 +14,8 @@
     <script src="resources/js/services.js"></script>
     <script src="resources/js/angular/angular-ui.github.io_bootstrap_ui-bootstrap-tpls-0.12.0.js"></script>
     <script src="resources/js/controllers/register.js"></script>
-    <script src="resources/js/services.js"></script>
+    <script src="resources/js/controllers/wishes.js"></script>
+    <script src="resources/js/controllers/wishesList.js"></script>
 </head>
 <body>
     <section ui-view></section>
