--- a/web/login.html
+++ b/web/login.html
@@ -18,6 +18,9 @@
             <ul ng-hide="!successMessages" class="success">
                 <li ng-repeat="message in successMessages">{{message}}</li>
             </ul>
+            <ul ng-hide="!errorMessages" class="error">
+                <li ng-repeat="message in errorMessages">{{message}}</li>
+            </ul>
         </div>
     </form>
 </div>
