--- a/web/login.html
+++ b/web/login.html
@@ -12,7 +12,7 @@
             </div>
             <div class="form-group">
                 <label for="passwordInput">Password</label>
-                <input id="passwordInput" class="form-control" placeholder="Enter password" ng-model="loginPerson.password">
+                <input type="password" id="passwordInput" class="form-control" placeholder="Enter password" ng-model="loginPerson.password">
             </div>
             <button type="submit" ng-click="login()" class="btn btn-primary">Submit</button>
             <ul ng-hide="!successMessages" class="success">
@@ -23,4 +23,7 @@
             </ul>
         </div>
     </form>
+</div>
+<div class="col-lg-offset-10">
+    <a ui-sref="start">Oops, I think, I should go back!</a>
 </div>
