--- a/web/private/wishesList.html
+++ b/web/private/wishesList.html
@@ -1,39 +1,45 @@
-<div class="col-lg-8 col-lg-offset-2">
-    <tabset justified="true">
-        <tab heading="My Wishes" ng-controller="WishesController as wishCtrl">
-            <div>
-                <div >
-                    <label>What gift you want from Santa?</label>
-                    <input  placeholder="Enter what you want" ng-model="wish.want">
+<form class="form-inline">
+    <div class="col-lg-8 col-lg-offset-2 form-group">
+        <tabset justified="true">
+            <tab heading="My Wishes" ng-controller="WishesController">
+                <form class="form-inline">
+                    <div class="form-group">
+                        <label>What gift you want from Santa?</label>
+                        <input placeholder="Enter what you want" ng-model="wish.what">
+                    </div>
+                    <div class="form-group">
+                        <label>How much you want it?</label>
+                        <input placeholder="Enter number" ng-model="wish.count">
+                    </div>
+                    <button type="button" class="btn btn-success" ng-click="addWish()">Add wish</button>
+                    <ul ng-hide="!errorMessages" class="error">
+                        <li ng-repeat="message in errorMessages">{{message}}</li>
+                    </ul>
+                </form>
+                <div>
+                    <table class="table table-bordered">
+                        <tr>
+                            <th>What you want</th>
+                            <th>How many you want</th>
+                            <th>Delete this wish</th>
+                        </tr>
+                        <tr ng-repeat="wish in wishes">
+                            <td>{{wish.what}}</td>
+                            <td>{{wish.count | number}}</td>
+                            <td>
+                                <button type="button" class="btn btn-warning" ng-click="deleteWish(wish.id, $index)">
+                                    <span class="glyphicon glyphicon-remove-circle"></span>
+                                </button>
+                            </td>
+                        </tr>
+                    </table>
                 </div>
-                <div >
-                    <label>How much you want it?</label>
-                    <input placeholder="Enter number" ng-model="wish.count">
-                </div>
-                <button type="button" class="btn btn-success" ng-click="addWish()">Add wish</button>
-                <ul ng-hide="!errorMessages" class="error">
-                    <li ng-repeat="message in errorMessages">{{message}}</li>
-                </ul>
-            </div>
-            <div>
-                <table class="table table-bordered">
-                    <tr>
-                        <th>What you want</th>
-                        <th>How many you want</th>
-                        <th>Delete this wish</th>
-                    </tr>
-                    <tr ng-repeat="wish in wishes">
-                        <td >{{wish.want}}</td>
-                        <td >{{wish.count | number}}</td>
-                        <td >
-                            <button type="button" class="btn btn-warning" ng-click="deleteWish(wish.id)">
-                                <span class="glyphicon glyphicon-remove-circle"></span>
-                            </button>
-                        </td>
-                    </tr>
-                </table>
-            </div>
-        </tab>
-        <tab heading="I'm Santa">Who wan't some gifts!</tab>
-    </tabset>
-</div>
+            </tab>
+            <tab heading="I'm Santa">Who wan't some gifts!</tab>
+        </tabset>
+
+    </div>
+    <div class="col-lg-1 form-group" ng-controller="loginController">
+        <button type="button" ng-click="logout()" class="btn btn-danger btn-lg">Logout</button>
+    </div>
+</form>
