--- a/web/register.html
+++ b/web/register.html
@@ -20,11 +20,11 @@
             </div>
             <div class="form-group">
                 <label for="passwordInput">Password</label>
-                <input id="passwordInput" class="form-control" placeholder="Create your password" ng-model="registerPerson.password">
+                <input type="password" id="passwordInput" class="form-control" placeholder="Create your password" ng-model="registerPerson.password">
             </div>
             <div class="form-group">
                 <label for="repeatPasswordInput">Repeat password</label>
-                <input id="repeatPasswordInput" class="form-control" placeholder="Repeat your password" ng-model="registerPerson.repeatPassword">
+                <input type="password" id="repeatPasswordInput" class="form-control" placeholder="Repeat your password" ng-model="registerPerson.repeatPassword">
             </div>
             <button type="submit" ng-click="register()" class="btn btn-primary">Submit</button>
             <ul ng-hide="!successMessages" class="success">
