--- a/web/index.html
+++ b/web/index.html
@@ -16,6 +16,7 @@
     <script src="resources/js/controllers/register.js"></script>
     <script src="resources/js/controllers/wishes.js"></script>
     <script src="resources/js/controllers/wishesList.js"></script>
+    <script src="resources/js/controllers/santaStuff.js"></script>
 </head>
 <body>
     <section ui-view></section>
