Global refactoring 2(thx JohnPapa) (continue - adding directive 'awesome things')

--- a/web/mainPage/wishesList.html
+++ b/web/mainPage/wishesList.html
@@ -1,94 +1,17 @@
 <form class="form-inline">
     <div class="col-lg-8 col-lg-offset-2 form-group">
         <tabset justified="true">
-            <tab heading="My Wishes" ng-controller="WishesController">
-                <form class="form-inline">
-                    <div class="form-group">
-                        <label>What gift you want from Santa?</label>
-                        <input placeholder="Enter what you want" ng-model="wish.what">
-                    </div>
-                    <div class="form-group">
-                        <label>How much you want it?</label>
-                        <input placeholder="Enter number" ng-model="wish.count">
-                    </div>
-                    <button type="button" class="btn btn-success" ng-click="addWish()">Add wish</button>
-                    <ul ng-hide="!errorMessages" class="error">
-                        <li ng-repeat="message in errorMessages">{{message}}</li>
-                    </ul>
-                </form>
-                <div>
-                    <table class="table table-bordered">
-                        <tr>
-                            <th>What you want</th>
-                            <th>How many you want</th>
-                            <th>Your santa says</th>
-                            <th>Delete this wish</th>
-                        </tr>
-                        <tr ng-repeat="wish in wishes">
-                            <td>{{wish.what}}</td>
-                            <td>{{wish.count | number}}</td>
-                            <td>
-                                <span class="glyphicon glyphicon-thumbs-up" ng-if="wish.santasAnswer === 1"></span>
-                                <span class="glyphicon glyphicon-thumbs-down" ng-if="wish.santasAnswer === -1"></span>
-                                <span class="glyphicon glyphicon-eye-close" ng-if="wish.santasAnswer === 0"></span>
-                            </td>
-                            <td>
-                                <button type="button" class="btn btn-warning" ng-click="deleteWish(wish.id, $index)">
-                                    <span class="glyphicon glyphicon-remove-circle"></span>
-                                </button>
-                            </td>
-                        </tr>
-                    </table>
-                </div>
+            <tab heading="My Wishes">
+                <wishes></wishes>
             </tab>
-            <tab heading="I'm Santa" ng-controller="SantaController">
-                <div class="jumbotron">
-                    <h1 align="center">Who wan't some gifts!</h1>
-                </div>
-                <h3 ng-hide="needForGift">You haven't good children!</h3>
-                <div ng-repeat="person in needForGift">
-                    Who need gifts? <h2>{{person.firstName}} {{person.lastName}}</h2>
-                    <table class="table table-bordered">
-                        <tr>
-                            <th>What you want</th>
-                            <th>How many you want</th>
-                            <th>What did you say?</th>
-                        </tr>
-                        <tr ng-repeat="wish in person.myWishes">
-                            <td>{{wish.what}}</td>
-                            <td>{{wish.count | number}}</td>
-                            <td>
-                                <div class="btn-group" ng-if="wish.santasAnswer === 0">
-                                    <button type="button" class="btn btn-success" ng-click="updateAnswer(1,wish)">
-                                        <span class="glyphicon glyphicon-ok"></span>
-                                    </button>
-                                    <button type="button" class="btn btn-danger" ng-click="updateAnswer(-1, wish)">
-                                        <span class="glyphicon glyphicon-remove"></span>
-                                    </button>
-                                </div>
-                                <span class="glyphicon glyphicon-ok" ng-if="wish.santasAnswer === 1"></span>
-                                <span class="glyphicon glyphicon-remove" ng-if="wish.santasAnswer === -1"></span>
-                            </td>
-                        </tr>
-                    </table>
-                </div>
+            <tab heading="I'm Santa">
+                <santa-stuff></santa-stuff>
             </tab>
-            <tab heading="Gift Room" ng-controller="roomController">
-                <form class="form-inline">
-                    <div class="form-group">
-                        <label>Wanna create gift room?</label>
-                        <input placeholder="Enter room name" ng-model="room.name">
-                    </div>
-                    <button type="button" class="btn btn-success" ng-click="addRoom()">Create room</button>
-                    <ul ng-hide="!errorMessages" class="error">
-                        <li ng-repeat="message in errorMessages">{{message}}</li>
-                    </ul>
-                </form>
+            <tab heading="Gift Room">
+                <gift-room></gift-room>
             </tab>
         </tabset>
 
     </div>
-    <div class="col-lg-1 form-group" ng-controller="loginController">
-        <button type="button" ng-click="logout()" class="btn btn-danger btn-lg">Logout</button>
-    </div>
+    <logout></logout>
 </form>
