trying resolve infinite recursion rooms - persons

--- a/web/index.html
+++ b/web/index.html
@@ -12,22 +12,33 @@
     <script src="resources/js/angular/angular-ui.github.io_bootstrap_ui-bootstrap-tpls-0.12.0.js"></script>
 
     <script src="app.js"></script>
+
     <script src="login/login.module.js"></script>
     <script src="login/login.controller.js"></script>
     <script src="login/logout.directive.js"></script>
+
     <script src="mainPage/mainPage.module.js"></script>
     <script src="mainPage/giftRoom/giftRoom.module.js"></script>
     <script src="mainPage/giftRoom/giftRoom.controller.js"></script>
     <script src="mainPage/giftRoom/giftRoom.directive.js"></script>
+
+    <script src="mainPage/myGiftRooms/myGiftRooms.module.js"></script>
+    <script src="mainPage/myGiftRooms/myGiftRooms.controller.js"></script>
+    <script src="mainPage/myGiftRooms/myGiftRooms.directive.js"></script>
+
     <script src="mainPage/santasStuff/santaStuff.module.js"></script>
     <script src="mainPage/santasStuff/santaStuff.controller.js"></script>
     <script src="mainPage/santasStuff/santaStuff.directive.js"></script>
+
     <script src="mainPage/wishes/wishes.module.js"></script>
     <script src="mainPage/wishes/wishes.controller.js"></script>
     <script src="mainPage/wishes/wishes.directive.js"></script>
+
     <script src="register/register.module.js"></script>
     <script src="register/register.controller.js"></script>
+
     <script src="services/services.js"></script>
+
     <script src="start/start.module.js"></script>
     <script src="start/start.controller.js"></script>
 </head>
