--- a/web/mainPage/wishesList.html
+++ b/web/mainPage/wishesList.html
@@ -7,11 +7,14 @@
             <tab heading="I'm Santa">
                 <santa-stuff></santa-stuff>
             </tab>
-            <tab heading="Gift Room">
+            <tab heading="My Gift Rooms">
+                <my-gift-rooms></my-gift-rooms>
+            </tab>
+            <tab heading="All Gift Rooms">
                 <gift-room></gift-room>
             </tab>
-        </tabset>
 
+        </tabset>
     </div>
     <logout></logout>
 </form>
