Success with gift rooms(adding event and listeners)!

--- a/web/mainPage/giftRoom/giftRoom.template.html
+++ b/web/mainPage/giftRoom/giftRoom.template.html
@@ -1,5 +1,8 @@
 
 <div>
+    <ul ng-hide="!errorMessages" class="error">
+        <li ng-repeat="message in errorMessages">{{message}}</li>
+    </ul>
     <table class="table table-bordered">
         <tr>
             <th>Room #</th>
