--- a/web/mainPage/santasStuff/santaStuff.template.html
+++ b/web/mainPage/santasStuff/santaStuff.template.html
@@ -1,5 +1,5 @@
 <div class="jumbotron">
-    <h1 align="center">Who wan't some gifts!</h1>
+    <h1 align="center">Who wants some gifts?</h1>
 </div>
 <h3 ng-hide="needForGift">You haven't good children!</h3>
 <div ng-repeat="person in needForGift">
