--- a/web/start/start.html
+++ b/web/start/start.html
@@ -1,6 +1,6 @@
 <script src="resources/js/controllers/carousel.js"></script>
 <div class="jumbotron">
-    <h1 align="center">Ho! Ho! Ho! Merry <span class="crossline">Christmas</span> any Holiday!</h1>
+    <h1 align="center">{{'TITLE1' | translate}}<span class="crossline">{{'TITLE2' | translate}}</span> {{'TITLE3' | translate}}</h1>
 </div>
 
 <div ng-controller="carouselCtrl">
@@ -10,7 +10,7 @@
                 <a ui-sref="{{slide.href}}">
                     <img ng-src="{{slide.image}}" style="margin:auto;">
                     <div class="carousel-caption">
-                        <h3>{{slide.text}}</h3>
+                        <h3>{{slide.text | translate}}</h3>
                     </div>
                 </a>
             </slide>
