--- a/web/login/login.html
+++ b/web/login/login.html
@@ -1,20 +1,20 @@
 
 <div class="jumbotron">
-    <h1 align="center" ng-show="loginPerson.login">Greetings, master {{loginPerson.login}}!</h1>
-    <h1 align="center" ng-show="!loginPerson.login">Greetings, master jedi!</h1>
+    <h1 align="center" ng-show="loginPerson.login">{{'GREETINGALTER' | translate}}{{loginPerson.login}}!</h1>
+    <h1 align="center" ng-show="!loginPerson.login">{{'GREETING' | translate}}</h1>
 </div>
 <div>
     <form id="log">
         <div class="col-sm-4 col-sm-offset-4">
             <div class="form-group">
-                <label for="loginInput">Login</label>
-                <input id="loginInput" class="form-control" placeholder="Enter login"  ng-model="loginPerson.login"/>
+                <label for="loginInput">{{'LOGIN' | translate}}</label>
+                <input id="loginInput" class="form-control" placeholder="{{'ENTERLOGIN' | translate}}"  ng-model="loginPerson.login"/>
             </div>
             <div class="form-group">
-                <label for="passwordInput">Password</label>
-                <input type="password" id="passwordInput" class="form-control" placeholder="Enter password" ng-model="loginPerson.password">
+                <label for="passwordInput">{{'PASS' | translate}}</label>
+                <input type="password" id="passwordInput" class="form-control" placeholder="{{'ENTERPASS' | translate}}" ng-model="loginPerson.password">
             </div>
-            <button type="submit" ng-click="login()" class="btn btn-primary">Submit</button>
+            <button type="submit" ng-click="login()" class="btn btn-primary">{{'SIGNIN' | translate}}</button>
             <ul ng-hide="!successMessages" class="success">
                 <li ng-repeat="message in successMessages">{{message}}</li>
             </ul>
@@ -25,5 +25,5 @@
     </form>
 </div>
 <div class="col-lg-offset-10">
-    <a ui-sref="start">Oops, I think, I should go back!</a>
+    <a ui-sref="start">{{'BACK' | translate}}</a>
 </div>
