--- a/web/register/register.html
+++ b/web/register/register.html
@@ -1,32 +1,32 @@
 
 <div class="jumbotron">
-    <h1 align="center" ng-show="registerPerson.login">Greetings, master {{registerPerson.login}}!</h1>
-    <h1 align="center" ng-show="!registerPerson.login">Greetings, master jedi!</h1>
+    <h1 align="center" ng-show="registerPerson.login">{{'GREETINGALTER' | translate}}{{registerPerson.login}}!</h1>
+    <h1 align="center" ng-show="!registerPerson.login">{{'GREETING' | translate}}</h1>
 </div>
 <div>
     <form id="log">
         <div class="col-sm-4 col-sm-offset-4">
             <div class="form-group">
-                <label for="firstNameInput">First Name</label>
-                <input id="firstNameInput" class="form-control" placeholder="Enter your first name"  ng-model="registerPerson.firstName"/>
+                <label for="firstNameInput">{{'FIRSTNAME' | translate}}</label>
+                <input id="firstNameInput" class="form-control" placeholder="{{'ENTERFN' | translate}}"  ng-model="registerPerson.firstName"/>
             </div>
             <div class="form-group">
-                <label for="lastNameInput">Last Name</label>
-                <input id="lastNameInput" class="form-control" placeholder="Enter your last name"  ng-model="registerPerson.lastName"/>
+                <label for="lastNameInput">{{'LASTNAME' | translate}}</label>
+                <input id="lastNameInput" class="form-control" placeholder="{{'ENTERLN' | translate}}"  ng-model="registerPerson.lastName"/>
             </div>
             <div class="form-group">
-                <label for="loginInput">Login</label>
-                <input id="loginInput" class="form-control" placeholder="Create your login"  ng-model="registerPerson.login"/>
+                <label for="loginInput">{{'LOGIN' | translate}}</label>
+                <input id="loginInput" class="form-control" placeholder="{{'CREATELOGIN' | translate}}"  ng-model="registerPerson.login"/>
             </div>
             <div class="form-group">
-                <label for="passwordInput">Password</label>
-                <input type="password" id="passwordInput" class="form-control" placeholder="Create your password" ng-model="registerPerson.password">
+                <label for="passwordInput">{{'PASS' | translate}}</label>
+                <input type="password" id="passwordInput" class="form-control" placeholder="{{'CREATEPASS' | translate}}" ng-model="registerPerson.password">
             </div>
             <div class="form-group">
-                <label for="repeatPasswordInput">Repeat password</label>
-                <input type="password" id="repeatPasswordInput" class="form-control" placeholder="Repeat your password" ng-model="registerPerson.repeatPassword">
+                <label for="repeatPasswordInput">{{'REPEATPASS' | translate}}</label>
+                <input type="password" id="repeatPasswordInput" class="form-control" placeholder="{{'REPEATYPASS' | translate}}" ng-model="registerPerson.repeatPassword">
             </div>
-            <button type="submit" ng-click="register()" class="btn btn-primary">Submit</button>
+            <button type="submit" ng-click="register()" class="btn btn-primary">{{'REGISTER' | translate}}</button>
             <ul ng-hide="!successMessages" class="success">
                 <li ng-repeat="message in successMessages">{{message}}</li>
             </ul>
@@ -36,4 +36,7 @@
 
         </div>
     </form>
+</div>
+<div class="col-lg-offset-10">
+    <a ui-sref="start">{{'BACK' | translate}}</a>
 </div>
