--- a/web/mainPage/myGiftRooms/roomModal.template.html
+++ b/web/mainPage/myGiftRooms/roomModal.template.html
@@ -1,6 +1,7 @@
 <div class="modal-header">
     <h3 class="modal-title">{{room.name}}</h3>
     <button class="btn btn-primary" ng-click="shuffle()" ng-show="currentUserID === room.admin.id && !room.isShuffled">Shuffle secret Santas</button>
+    <button class="btn btn-danger" ng-click="leaveRoom()" ng-show="currentUserID !== room.admin.id && !room.isShuffled"></button>
 </div>
 <div class="modal-body">
     <table class="table table-bordered">
@@ -8,6 +9,7 @@
             <th>First Name</th>
             <th>Last Name</th>
             <th>Number of wishes</th>
+            <th ng-show="currentUserID === room.admin.id && !room.isShuffled">Remove this person</th>
         </tr>
         <tr>
             <td>Creator of the {{room.name}} room: </td>
@@ -24,6 +26,9 @@
             <td>{{person.firstName}}</td>
             <td>{{person.lastName}}</td>
             <td>{{person.myWishes.length}}</td>
+            <td ng-show="currentUserID === room.admin.id && !room.isShuffled">
+                <button class="btn btn-danger" ng-click="removePerson(person.id)"><span class="glyphicon glyphicon-ban-circle"></span></button>
+            </td>
         </tr>
     </table>
 </div>
